# cpp_cmake_builder_pattern

./: CMakeLists.txt
cpp_cmake_builder_pattern/: CMakeLists.txt  cpp_cmake_builder_pattern.cpp  cpp_cmake_builder_pattern.h
