# CMakeList.txt: проект CMake для cpp_cmake_builder_pattern; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (cpp_cmake_builder_pattern "cpp_cmake_builder_pattern.cpp" "cpp_cmake_builder_pattern.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
